--- a/FutaMeetWeb/Pages/Index.cshtml
+++ b/FutaMeetWeb/Pages/Index.cshtml
@@ -304,8 +304,8 @@
         <a asp-page="/Login" class="sign-in-btn">
             <span class="sign-in-text">Sign In</span>
         </a>
-        <div class="futarians-btn">Made for Futarians By Futarians</div>
-        <p class="urgent-message" style=" color: #FFD700;">Hey, hurry up, class is starting soon!</p>
+        <div class="futarians-btn">Hey, hurry up, class is starting soon!</div>
+        <p class="urgent-message" style=" color: #8F949B;font-size: 13px">Made for Futarians By Futarians</p>
         <a href="#" class="guest-link">Join as guest</a>
     </div>
     <div class="background-gradient"></div>
