--- a/FutaMeetWeb/Pages/SessionRecap.cshtml
+++ b/FutaMeetWeb/Pages/SessionRecap.cshtml
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <p class="card-text"><strong>Average Attendance Score:</strong> @Model.AverageAttendanceScore.ToString("F1")%</p>
                     <p class="card-text"><strong>Participants with >= 70% Score:</strong> @Model.ParticipantsAbove70Percent</p>
-                    <p class="card-text"><strong>Most Common Penalty Reason:</strong> @Model.MostCommonPenaltyReason</p>
+                    @* <p class="card-text"><strong>Most Common Penalty Reason:</strong> @Model.MostCommonPenaltyReason</p> *@
                 </div>
             </div>
 
