added file uploads

--- a/FutaMeetWeb/Pages/CreateSession.cshtml
+++ b/FutaMeetWeb/Pages/CreateSession.cshtml
@@ -625,7 +625,8 @@
                             <!-- Messages will be dynamically added here -->
                         </div>
                         <div class="input-group mt-2">
-                            <input type="text" id="postInput" rows="2" class="modern-input" placeholder="Create Post...">
+                            <input type="text" id="postInput" rows="2" class="modern-input" placeholder="Create Post..."/>
+                            <input type="file"  id="fileInput" />
                             <button id="createPost" class="btn btn-skeuo">
                                 <i class="fas fa-paper-plane"></i> Post
                             </button>
